--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.3.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "latest": "^0.2.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0"
   },
