--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,17 @@ services:
     runtime: node
     branch: main
     plan: starter
+
     buildCommand: |
       npm install
       npx prisma generate
-      npx prisma migrate deploy || npx prisma migrate dev --name init
-      npm run seed
+      npm run bundle:openapi
+
+    preDeployCommand: |
+      npx prisma migrate deploy
+      # uncomment ONLY if you want to seed on every deploy
+      npx prisma db seed
+
     startCommand: npm start
+
     
